[package]
name = "docker_to_uefi_bootable_image"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tempfile = "3"
clap = { version = "4.1", features = ["derive"] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
rand = "0.8.4"

[[bin]]
name = "docker_to_uefi_bootable_image"
doc = false

